Formatted and added to Main.tex

--- a/literature-review/main.tex
+++ b/literature-review/main.tex
@@ -45,7 +45,9 @@ Our literature review taught several important lessons. These lessons fall into 
 
 
 \subsection{What solutions have been explored}
-Many different solutions have been explored, Most of these solutions have been under the context of navigation and of these not many have made it past the end user testing, despite showing promising results. An example of this is a paper : \cite{} describing a waypoint system was shown to be very promising and made use of audio and tactile feedback. 
+Many different solutions have been explored, Most of these solutions have been under the context of navigation and of these not many have made it past the end user testing, 
+despite showing promising results. An example of this is a paper : \cite{} describing a waypoint system that was shown to be very promising and made use of audio and tactile feedback. 
+
 
 
 %This section to explain why we are doing a survey now as opposed to a low fidelity proto-type.
@@ -54,7 +56,7 @@ Many different solutions have been explored, Most of these solutions have been u
 \section{Lessons Learned From Literature}
 
 
-%FIX THE FORMATTING OF THESE SECTIONS. these sections are nesting for some reason.
+%Instead of just listing all of our data/lessons flint proposed that we basically write a mini paper that sort of flows through all the lessons nicely.
 \subsection{Aaron's Lessons}
 \cite{} \textbf{Visual Impairments and Mobile Touchscreen Interaction: State-Of-The-Art, Causes of Visual Impairment, and Design Guidelines} \cite{}
 \begin{enumerate}
