Took out the / on line 44 Feedback given from Chris during code review

--- a/literature-review/main.tex
+++ b/literature-review/main.tex
@@ -41,7 +41,7 @@
 Our literature review taught several important lessons. These lessons fall into three distinct categories: navigation, information-gathering, and modality. Each of these categories will be discussed/reviewed below. 
 
 %Add more here as a sort of intro to the discussion and overview???
-\section{Literature Discussion/Overview}
+\section{Literature Discussion and Overview}
 This discussion is based off of all the literature reviewed, all reviewed documents can be found in the references section at the bottom of the paper. Much of this discussion will focus on...
 
 %add references to the correct papers - Aaron
