Added a temporary citation bibtex was throwing errors without some citation

--- a/literature-review/main.tex
+++ b/literature-review/main.tex
@@ -46,7 +46,7 @@ This discussion is based off of all the literature reviewed, all reviewed docume
 
 %add references to the correct papers - Aaron
 \subsection{What problems occur when accessing information from a map}
-Based off the literature reviewed there are a few standout problems that appear when accessing information from a map. The main problems include the following: Understanding relational data(where you are relative to known locations)\cite{}, perception of angle/trajectory to a given location\cite{}, and obtaining relevant data from the map locations such as a location description\cite{}. Another large problem that was explored in our research was actual application accessibility, many of the largest online map and location services have been tested and shown to be only partially accessible to visually impaired individuals based off WCAG 2.0(Web Content Accessibility Guidelines)\cite{}.
+Based off the literature reviewed there are a few standout problems that appear when accessing information from a map. The main problems include the following: Understanding relational data(where you are relative to known locations)\cite{10.1145/2207676.2207734}, perception of angle/trajectory to a given location\cite{}, and obtaining relevant data from the map locations such as a location description\cite{}. Another large problem that was explored in our research was actual application accessibility, many of the largest online map and location services have been tested and shown to be only partially accessible to visually impaired individuals based off WCAG 2.0(Web Content Accessibility Guidelines)\cite{}.
 
 %
 \subsection{What solutions have been explored}
