--- a/2022-10-26.md
+++ b/2022-10-26.md
@@ -3,11 +3,13 @@
 Flint has two people for the survey for the pilot test
 
 Reach out to the agencies that Flint has in mind for a recruitment strategy
-- Specifically, get a letter from the agencies saying that they are willing to recruit
-- Specifically, write an email
+
+-   Specifically, get a letter from the agencies saying that they are willing to recruit
+-   Specifically, write an email
 
 Services for the blind
-- Another branch for older and disabled people
+
+-   Another branch for older and disabled people
 
 Need IRB approval ASAP (confirmation from agencies that they are willing to recruit)
 Everyone needs to sign up for https://irbnet.org/
@@ -19,21 +21,23 @@ recruitment statement
 document that explains and describes how we are getting participants so future groups can do the same with less barriers
 
 Pilot test asap:
-- Build questions into qualtrics by Friday
-- Open-ended question
-- Flint will have them do it by Wednesday
-- Deliver to flint's two participants
-- Get feedback
-- Analyze results (Statistical Analysis, see if we have normal distributions or not. The survey needs to be quantitively analyzable) use SPSS?
+
+-   Build questions into qualtrics by Friday
+-   Open-ended question
+-   Flint will have them do it by Wednesday
+-   Deliver to flint's two participants
+-   Get feedback
+-   Analyze results (Statistical Analysis, see if we have normal distributions or not. The survey needs to be quantitatively analyzable) use SPSS?
 
 Likert Scale (1-5 scale)
 
-Democrafic questions
-- gender (look up appropriate way of asking male/female)
-- Level of education
-- Age
-- left vs right hand
-- amount of time they use computer/technology
-- preferred technology
-- what kinds do you use
-- how often/how much time in a week/day do you use these devices?
+Demographic questions
+
+-   gender (look up appropriate way of asking male/female)
+-   Level of education
+-   Age
+-   left vs right hand
+-   amount of time they use computer/technology
+-   preferred technology
+-   what kinds do you use
+-   how often/how much time in a week/day do you use these devices?
